[lworld] C2 fails to scalarize inline types in safepoint debug info in rare cases

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (...workspace/open/src/hotspot/share/opto/macro.cpp:1171), pid=1059, tid=1083
      # assert(!inline_alloc) failed: Inline type allocations should not have safepoint uses

      Current CompileTask:
      C2: 5347 1092 b 4 compiler.valhalla.inlinetypes.TestArrays::test2 (24 bytes)

      Stack: [0x00007ffa6dcfd000,0x00007ffa6ddfe000], sp=0x00007ffa6ddf8fd0, free space=1007k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13cef25] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x4d5
      V [libjvm.so+0x13cf2cb] PhaseMacroExpand::eliminate_macro_nodes()+0x2eb
      V [libjvm.so+0xa520bb] Compile::Optimize()+0x188b
      V [libjvm.so+0xa53956] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1656
      V [libjvm.so+0x847f00] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6a0
      V [libjvm.so+0xa63b59] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
      V [libjvm.so+0xa647b8] CompileBroker::compiler_thread_loop()+0x518
      V [libjvm.so+0x19774dc] JavaThread::thread_main_inner()+0x27c
      V [libjvm.so+0x197da90] Thread::call_run()+0x100
      V [libjvm.so+0x162e324] thread_native_entry(Thread*)+0x104

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: