8275583: [lworld] C2 fails to scalarize inline types in safepoint debug info in rare cases